fixed visible focus

--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,7 @@ button:disabled:hover {
 input[type="color"] {
   cursor: pointer;
 }
+
+button:focus, button:focus, input:focus, a:focus {
+  outline: 4px dashed #e6700f;
+}
